test/visibility/private/functions/useOtherSibling.good
useOtherSibling.chpl:12: In function 'main':
useOtherSibling.chpl:13: error: unresolved call 'foo(6)'
useOtherSibling.chpl:13: note: because no functions named foo found in scope
